# traversability_estimation

./: LICENSE  README.md  changelog
.github/: CODEOWNERS
elevation_obstacle_detection/: CMakeLists.txt  package.xml
elevation_obstacle_detection/include/elevation_obstacle_detection/: ElevationObstacleDetection.hpp
elevation_obstacle_detection/launch/: custom_rosconsole.conf  starleth_teach_and_repeat.launch
elevation_obstacle_detection/parameters/robots/: starleth_teach_and_repeat.yaml
elevation_obstacle_detection/src/: ElevationObstacleDetection.cpp  TraversabilityEstimation.cpp  elevation_obstacle_detection_node.cpp  traversability_estimation_node.cpp
libtraversability_estimation/: CMakeLists.txt  filter_plugins.xml  package.xml
libtraversability_estimation/include/filters/: RoughnessFilter.h  RoughnessFilter.hpp  SlopeFilter.h  SlopeFilter.hpp  StepFilter.h  StepFilter.hpp
libtraversability_estimation/src/: RoughnessFilter.cpp  SlopeFilter.cpp  StepFilter.cpp
traversability_checker/: CMakeLists.txt  package.xml
traversability_checker/config/: default.yaml
traversability_checker/include/traversability_checker/: TraversabilityChecker.hpp
traversability_checker/launch/: custom_rosconsole.conf  traversability_checker.launch
traversability_checker/src/: TraversabilityChecker.cpp  traversability_checker_node.cpp
traversability_estimation/: CMakeLists.txt  package.xml
traversability_estimation/config/: default.yaml  elevation_map_filter.yaml  filter_parameter.yaml  robot.yaml  robot_filter_parameter.yaml  robot_footprint.yaml  robot_footprint_parameter.yaml  rosconsole.conf  starleth.yaml
traversability_estimation/config/visualization/: traversability.yaml
traversability_estimation/include/traversability_estimation/: RoughnessFilter.hpp  SlopeFilter.hpp  StepFilter.hpp  TraversabilityEstimation.hpp  TraversabilityFilterBase.hpp  TraversabilityMap.hpp  common.h
traversability_estimation/launch/: starleth.launch  traversability_estimation.launch  visualization.launch
traversability_estimation/maps/: elevation_map.bag
traversability_estimation/parameters/robots/: starleth.yaml
traversability_estimation/src/: TraversabilityEstimation.cpp  TraversabilityMap.cpp  traversability_estimation_node.cpp
traversability_estimation_filters/: CMakeLists.txt  filter_plugins.xml  package.xml
traversability_estimation_filters/include/filters/: RoughnessFilter.hpp  SlopeFilter.hpp  StepFilter.hpp  SurfaceNormalsFilter.hpp
traversability_estimation_filters/src/: RoughnessFilter.cpp  SlopeFilter.cpp  StepFilter.cpp  SurfaceNormalsFilter.cpp
traversability_msgs/: CMakeLists.txt  package.xml
traversability_msgs/msg/: FootprintPath.msg  TraversabilityResult.msg
traversability_msgs/srv/: CheckFootprintPath.srv  CheckFootprintPaths.srv  Overwrite.srv
