<?xml version="1.0"?>
<package>
  <name>traversability_estimation</name>
  <version>0.1.0</version>
  <description>ROS package for estimating traversability from elevation maps.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <author email="martiwer@student.ethz.ch">Martin Wermelinger</author>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <author email="ralf.kaestner@gmail.com">Ralf Kaestner</author>
  <license>MIT</license>
  <url type="website">https://github.com/ethz-asl/traversability_estimation</url>
  <url type="bugtracker">https://github.com/ethz-asl/traversability_estimation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_filters</build_depend>
  <build_depend>traversability_msgs</build_depend>
  <build_depend>traversability_estimation_filters</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_filters</run_depend>
  <run_depend>traversability_msgs</run_depend>
  <run_depend>traversability_estimation_filters</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
