<?xml version="1.0"?>
<package>
  <name>traversability_estimation_filters</name>
  <version>0.4.0</version>
  <description>library for filtering elevation maps.</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ethz-asl/traversability_estimation</url>
  <url type="bugtracker">https://github.com/ethz-asl/traversability_estimation/issues</url>
  <author email="martiwer@student.ethz.ch">Martin Wermelinger</author>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>filters</build_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>filters</run_depend>
  <export>
    <filters plugin="${prefix}/filter_plugins.xml" />
  </export>
</package>
