<?xml version="1.0"?>
<package>
  <name>traversability_msgs</name>
  <version>0.1.0</version>
  <description>ROS Message definitions for traversability estimation/checking.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <license>MIT</license>
  <url type="website">https://github.com/ethz-asl/traversability_estimation</url>
  <url type="bugtracker">https://github.com/ethz-asl/traversability_estimation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
