<?xml version="1.0"?>
<package>
  <name>traversability_msgs</name>
  <version>0.4.0</version>
  <description>ROS Message definitions for traversability estimation/checking.</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <license>MIT</license>
  <url type="website">https://github.com/ethz-asl/traversability_estimation</url>
  <url type="bugtracker">https://github.com/ethz-asl/traversability_estimation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
